add page heading and start button to index.html

--- a/404.html
+++ b/404.html
@@ -17,3 +17,16 @@
     <!--Title-->
     <title>Sudoku</title>
 </head>
+<body>
+    <h1>Sudoku</h1>
+    <hr>
+    <h2>Uh oh!</h2> 
+    <p>Looks like the page you are looking for does not exist. Sorry about that!</p>
+    <div class="homepage-buttons-container">
+        <a class="homepage-buttons" href="index.html"  aria-label="Click to navigate back to the home page">Home</a>
+    </div>
+</body>
+<footer>
+    <p>Made By Anthony Wilson</p>
+</footer>
+</html>
