--- a/index.html
+++ b/index.html
@@ -17,3 +17,11 @@
     <!--Title-->
     <title>Sudoku</title>
 </head>
+<body>
+    <h1>Sudoku</h1>
+    <hr>
+    <h2>Welcome!</h2>
+    <div class="homepage-buttons-container">
+        <a class="homepage-buttons" href="game.html"  aria-label="Click to navigate to game page to start a new game">Start Game</a>
+    </div>
+</body>
