add image for how to play section and add navigation buttons

--- a/index.html
+++ b/index.html
@@ -24,4 +24,37 @@
     <div class="homepage-buttons-container">
         <a class="homepage-buttons" href="game.html"  aria-label="Click to navigate to game page to start a new game">Start Game</a>
     </div>
+    <h2>How To Play</h2>
+    <div id="homepage-rules">
+        <ul id="homepage-rules-left">
+            <h3>General Rules for Sudoku</h3>
+            <li>Sudoku grid consists of 9x9 spaces.</li>
+            <li>You can use only numbers from 1 to 9.</li>
+            <li>Each 3×3 block can only contain numbers from 1 to 9.</li>
+            <li>Each vertical column can only contain numbers from 1 to 9.</li>
+            <li>Each horizontal row can only contain numbers from 1 to 9.</li>
+            <li>Each number in the 3×3 block, vertical column or horizontal row can be used only once.</li>
+            <li><a href="https://sudoku.com/how-to-play/sudoku-rules-for-complete-beginners/" target="_blank" id="tutorial" aria-label="open a new window to a website explaining how to play the game">For more information on how to play Sudoku, click here.</a></li>
+        </ul>
+        <ul id="homepage-rules-right">
+            <h3>About this version of Sudoku</h3>
+            <li>The goal of the game is to fill in all the tiles with the correct numbers in the shortest amount of time and with as few mistakes as possible.</li>
+            <li>The game will end when all tiles have been filled in.</li>
+            <li>To place a number on the board, select it from the right-hand side and click on the desired location. The selected number will have a <span id="green">GREEN</span> background.</li>
+            <li>To restart the current game, click the 'New Game' button.</li>
+            <li>To change the difficulty and start a new game, click on the difficulty display button.</li>
+            <li>The 'Notes' button <i class="fa-solid fa-pencil"></i> allows you to enter any numbers to aid you in finding the correct answer. To remove a note, enter the same number again or enter any number when not in notes mode. The buttons will turn <span id="skyblue">BLUE</span> when active.</li>
+            <li>The 'Undo' <i class="fa-solid fa-rotate-left"></i> and 'Redo' <i class="fa-solid fa-rotate-right"></i> buttons allow you to undo or redo previous actions, but will not undo or redo any notes made.</li>
+            <li>Clicking on the timer will pause the game, clicking again will unpause. When the game is paused, you will not be able to enter numbers or use the undo/redo buttons. </li>
+            <li>The number of mistakes you make will be tracked, aim for a perfect game by keeping the counter at 0</li>
+        </ul>
+    </div>
+    <h3>See below the layout of the sudoku game and what the buttons do</h3>
+    <div id="guide-image-container">
+        <img src="assets/images/site/guide.jpg" id="guide-image" alt="image displays the game board with annotations explaining the function of each button">
+    </div> 
+    <div class="homepage-buttons-container">
+        <a class="homepage-buttons" href="index.html"  aria-label="Click to navigate back to the top of the page">Home</a>
+        <a class="homepage-buttons" href="game.html"  aria-label="Click to navigate to game page to start a new game">Start Game</a>
+    </div>
 </body>
