add footer to index.html

--- a/index.html
+++ b/index.html
@@ -58,3 +58,7 @@
         <a class="homepage-buttons" href="game.html"  aria-label="Click to navigate to game page to start a new game">Start Game</a>
     </div>
 </body>
+<footer>
+    <p>Made By Anthony Wilson</p>
+</footer>
+</html>
