add how to play container on game.html

--- a/game.html
+++ b/game.html
@@ -17,3 +17,14 @@
     <!--Title-->
     <title>Sudoku</title>
 </head>
+<body>
+    <h1>Sudoku</h1>
+    <hr>
+    <div id="how-to-play-container">
+        <button id="how-to-play" class="how-to-play"  aria-label="navigates back to the home page where there are instructions on how to play the game"><i class="fa-solid fa-book-open"></i> How To Play</button>
+        <div>
+            <button id="audio-btn" class="how-to-play" aria-label="turn on or off music.">
+                <i class="fa-solid fa-music"></i> Play Music
+            </button>
+        </div>
+    </div>
