add game-container and top-container with 3 buttons, new game, timer and error in game.html

--- a/game.html
+++ b/game.html
@@ -28,3 +28,16 @@
             </button>
         </div>
     </div>
+    <div id="game-container">
+        <div id="container-top">
+            <div>
+                <button id="new-game" class="gamepage-buttons" aria-label="starts a new game">New Game</button>
+            </div>
+            <div>
+                <button id="timer" class="gamepage-buttons" aria-label="depending on the settings chosen, this timer will either count the time taken, or the time remaining.">
+                    <span class="counter-text">
+                        0:00 
+                    </span>
+                </button>
+            </div>
+        </div>
