add container-bottom with 2 buttons, difficulty and auto solve, to game.html

--- a/game.html
+++ b/game.html
@@ -40,4 +40,9 @@
                     </span>
                 </button>
             </div>
+            <div>
+                <button id="error" class="gamepage-buttons" aria-label="counts the number of errors made during a game.">
+                    Errors: <span class="counter-text">0</span>
+                </button>
+            </div>
         </div>
