add board to game.html. 3 rows, 9 boes, 81 tiles

--- a/game.html
+++ b/game.html
@@ -46,3 +46,126 @@
                 </button>
             </div>
         </div>
+        <div id="container-bottom">
+            <div>
+                <button id="diff" class="gamepage-buttons" aria-label="toggle difficulty between easy, medium and hard">Easy</button>
+            </div>
+            <div>
+                <button id="auto-solve" class="gamepage-buttons" aria-label="auto solve the game">Auto Solve</button>
+            </div>
+        </div>
+        <div id="container-left">
+            <div>
+                <button id="undo" class="digit-btn" aria-label="undo previous action"><i class="fa-solid fa-rotate-left"></i></button>
+            </div>
+            <div>
+                <button id="redo" class="digit-btn" aria-label="redo any undo actions"><i class="fa-solid fa-rotate-right"></i></button>
+            </div>
+        </div>
+        <div id="board">
+            <div id="row1">
+                <div id="box1" class="box">
+                    <div id="t0" class="tile"><span></span><span></span></div>
+                    <div id="t1" class="tile"><span></span><span></span></div>
+                    <div id="t2" class="tile"><span></span><span></span></div>
+                    <div id="t9" class="tile"><span></span><span></span></div>
+                    <div id="t10" class="tile"><span></span><span></span></div>
+                    <div id="t11" class="tile"><span></span><span></span></div>
+                    <div id="t18" class="tile"><span></span><span></span></div>
+                    <div id="t19" class="tile"><span></span><span></span></div>
+                    <div id="t20" class="tile"><span></span><span></span></div>
+                </div>
+                <div id="box2" class="box">
+                    <div id="t27" class="tile"><span></span><span></span></div>
+                    <div id="t28" class="tile"><span></span><span></span></div>
+                    <div id="t29" class="tile"><span></span><span></span></div>
+                    <div id="t36" class="tile"><span></span><span></span></div>
+                    <div id="t37" class="tile"><span></span><span></span></div>
+                    <div id="t38" class="tile"><span></span><span></span></div>
+                    <div id="t45" class="tile"><span></span><span></span></div>
+                    <div id="t46" class="tile"><span></span><span></span></div>
+                    <div id="t47" class="tile"><span></span><span></span></div>
+                </div>
+                <div id="box3" class="box">
+                    <div id="t54" class="tile"><span></span><span></span></div>
+                    <div id="t55" class="tile"><span></span><span></span></div>
+                    <div id="t56" class="tile"><span></span><span></span></div>
+                    <div id="t63" class="tile"><span></span><span></span></div>
+                    <div id="t64" class="tile"><span></span><span></span></div>
+                    <div id="t65" class="tile"><span></span><span></span></div>
+                    <div id="t72" class="tile"><span></span><span></span></div>
+                    <div id="t73" class="tile"><span></span><span></span></div>
+                    <div id="t74" class="tile"><span></span><span></span></div>
+                </div>
+            </div>
+            <div id="row2">
+                <div id="box4" class="box">
+                    <div id="t3" class="tile"><span></span><span></span></div>
+                    <div id="t4" class="tile"><span></span><span></span></div>
+                    <div id="t5" class="tile"><span></span><span></span></div>
+                    <div id="t12" class="tile"><span></span><span></span></div>
+                    <div id="t13" class="tile"><span></span><span></span></div>
+                    <div id="t14" class="tile"><span></span><span></span></div>
+                    <div id="t21" class="tile"><span></span><span></span></div>
+                    <div id="t22" class="tile"><span></span><span></span></div>
+                    <div id="t23" class="tile"><span></span><span></span></div>
+                </div>
+                <div id="box5" class="box">
+                    <div id="t30" class="tile"><span></span><span></span></div>
+                    <div id="t31" class="tile"><span></span><span></span></div>
+                    <div id="t32" class="tile"><span></span><span></span></div>
+                    <div id="t39" class="tile"><span></span><span></span></div>
+                    <div id="t40" class="tile"><span></span><span></span></div>
+                    <div id="t41" class="tile"><span></span><span></span></div>
+                    <div id="t48" class="tile"><span></span><span></span></div>
+                    <div id="t49" class="tile"><span></span><span></span></div>
+                    <div id="t50" class="tile"><span></span><span></span></div>
+                </div>
+                <div id="box6" class="box">
+                    <div id="t57" class="tile"><span></span><span></span></div>
+                    <div id="t58" class="tile"><span></span><span></span></div>
+                    <div id="t59" class="tile"><span></span><span></span></div>
+                    <div id="t66" class="tile"><span></span><span></span></div>
+                    <div id="t67" class="tile"><span></span><span></span></div>
+                    <div id="t68" class="tile"><span></span><span></span></div>
+                    <div id="t75" class="tile"><span></span><span></span></div>
+                    <div id="t76" class="tile"><span></span><span></span></div>
+                    <div id="t77" class="tile"><span></span><span></span></div>
+                </div>
+            </div>
+            <div id="row3">
+                <div id="box7" class="box">
+                    <div id="t6" class="tile"><span></span><span></span></div>
+                    <div id="t7" class="tile"><span></span><span></span></div>
+                    <div id="t8" class="tile"><span></span><span></span></div>
+                    <div id="t15" class="tile"><span></span><span></span></div>
+                    <div id="t16" class="tile"><span></span><span></span></div>
+                    <div id="t17" class="tile"><span></span><span></span></div>
+                    <div id="t24" class="tile"><span></span><span></span></div>
+                    <div id="t25" class="tile"><span></span><span></span></div>
+                    <div id="t26" class="tile"><span></span><span></span></div>
+                </div>
+                <div id="box8" class="box">
+                    <div id="t33" class="tile"><span></span><span></span></div>
+                    <div id="t34" class="tile"><span></span><span></span></div>
+                    <div id="t35" class="tile"><span></span><span></span></div>
+                    <div id="t42" class="tile"><span></span><span></span></div>
+                    <div id="t43" class="tile"><span></span><span></span></div>
+                    <div id="t44" class="tile"><span></span><span></span></div>
+                    <div id="t51" class="tile"><span></span><span></span></div>
+                    <div id="t52" class="tile"><span></span><span></span></div>
+                    <div id="t53" class="tile"><span></span><span></span></div>
+                </div>
+                <div id="box9" class="box">
+                    <div id="t60" class="tile"><span></span><span></span></div>
+                    <div id="t61" class="tile"><span></span><span></span></div>
+                    <div id="t62" class="tile"><span></span><span></span></div>
+                    <div id="t69" class="tile"><span></span><span></span></div>
+                    <div id="t70" class="tile"><span></span><span></span></div>
+                    <div id="t71" class="tile"><span></span><span></span></div>
+                    <div id="t78" class="tile"><span></span><span></span></div>
+                    <div id="t79" class="tile"><span></span><span></span></div>
+                    <div id="t80" class="tile"><span></span><span></span></div>
+                </div>
+            </div>
+        </div>
