add container-right with digits after board div. game.html

--- a/game.html
+++ b/game.html
@@ -169,3 +169,18 @@
                 </div>
             </div>
         </div>
+        <div id="container-right">
+            <div id="digits">
+                <button id="notes" class="digit-btn" aria-label="toggle note making mode"><i class="fa-solid fa-pencil"></i></button>
+                <button class="digit-btn"  aria-label="one">1</button>
+                <button class="digit-btn" aria-label="two">2</button>
+                <button class="digit-btn" aria-label="three">3</button>
+                <button class="digit-btn" aria-label="four">4</button>
+                <button class="digit-btn" aria-label="five">5</button>
+                <button class="digit-btn" aria-label="six">6</button>
+                <button class="digit-btn" aria-label="seven">7</button>
+                <button class="digit-btn" aria-label="eight">8</button>
+                <button class="digit-btn" aria-label="nine">9</button>
+            </div>
+        </div>
+    </div>
