--- a/game.html
+++ b/game.html
@@ -184,3 +184,9 @@
             </div>
         </div>
     </div>
+    <script src="assets/js/script.js"></script>
+</body>
+<footer>
+    <p>Made By Anthony Wilson</p>
+</footer>
+</html>
