--- a/game.html
+++ b/game.html
@@ -23,7 +23,7 @@
         <button id="how-to-play" class="how-to-play"  aria-label="navigates back to the home page where there are instructions on how to play the game"><i class="fa-solid fa-book-open"></i> How To Play</button>
         <div>
             <button id="audio-btn" class="how-to-play" aria-label="turn on or off music.">
-                <i class="fa-solid fa-music"></i> Play Music
+                Play Music
             </button>
         </div>
     </div>
