notes function update so that when notes mode activated digit button background text remains green instead of changing to blue

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
             <h3>About this version of Sudoku</h3>
             <li>The goal of the game is to fill in all the tiles with the correct numbers in the shortest amount of time and with as few mistakes as possible.</li>
             <li>The game will end when all tiles have been filled in.</li>
-            <li>To place a number on the board, select it from the right-hand side and click on the desired location. The selected number will have a <span id="green">GREEN</span> background.</li>
+            <li>To place a number on the board, first click your desired number from the list on the right handside. When selected it will have a <span id="green">GREEN</span> background. Then click on the tile you wish to change on the board. </li>
+            <li>The 'Notes' button <i class="fa-solid fa-pencil"></i> allows you to enter any numbers to aid you in finding the correct answer. When active, the notes button will have a <span id="skyblue">BLUE</span> background. To remove a note, enter the same number again or enter any number when not in notes mode (be sure you enter the right number to avoid an error!)</li>
             <li>To restart the current game, click the 'New Game' button.</li>
             <li>To change the difficulty and start a new game, click on the difficulty display button.</li>
-            <li>The 'Notes' button <i class="fa-solid fa-pencil"></i> allows you to enter any numbers to aid you in finding the correct answer. To remove a note, enter the same number again or enter any number when not in notes mode. The buttons will turn <span id="skyblue">BLUE</span> when active.</li>
             <li>The 'Undo' <i class="fa-solid fa-rotate-left"></i> and 'Redo' <i class="fa-solid fa-rotate-right"></i> buttons allow you to undo or redo previous actions, but will not undo or redo any notes made.</li>
             <li>Clicking on the timer will pause the game, clicking again will unpause. When the game is paused, you will not be able to enter numbers or use the undo/redo buttons. </li>
             <li>The number of mistakes you make will be tracked, aim for a perfect game by keeping the counter at 0</li>
