--- a/game.html
+++ b/game.html
@@ -186,6 +186,6 @@
     <script src="assets/js/script.js"></script>
 </body>
 <footer>
-    <p>Made By Anthony Wilson</p>
+    <a href="https://github.com/Tonywilson1211" target="_blank" id="footer-text" aria-label="link to website creator's github page">Made By Anthony Wilson</a>
 </footer>
 </html>
