--- a/404.html
+++ b/404.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--js and css links-->
-    <script src="assets/js/script.js"></script>
+    <!--css links-->
     <link rel="stylesheet" href="assets/css/styles.css">
     <!--favicon links-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/android-chrome-192x192.png">
