--- a/game.html
+++ b/game.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!--js and css links-->
+    <meta name="description" content="Sudoku puzzle game with notes, timer, error counter, undo/redo ability and difficulty options">
+    <meta name="keywords" content="sudoku, puzzle, game, how to play sudoku">
+    <!--css links-->
     <link rel="stylesheet" href="assets/css/styles.css">
     <!--favicon links-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/android-chrome-192x192.png">
