small tweaks made to spelling in readme, add notes to html/css/js files, and minor rearranging of code in js file.

--- a/404.html
+++ b/404.html
@@ -19,14 +19,18 @@
     <title>Sudoku</title>
 </head>
 <body>
+    <!--body title-->
     <h1>Sudoku</h1>
     <hr>
+    <!--text-->
     <h2>Uh oh!</h2> 
     <p>Looks like the page you are looking for does not exist. Sorry about that!</p>
     <div class="homepage-buttons-container">
+        <!--nav button-->
         <a class="homepage-buttons" href="index.html"  aria-label="Click to navigate back to the home page">Home</a>
     </div>
     <footer>
+        <!--footer section-->
         <a href="https://github.com/Tonywilson1211" target="_blank" id="footer-text" aria-label="link to website creator's github page">Made By Anthony Wilson</a>
     </footer>
 </body>
