--- a/index.html
+++ b/index.html
@@ -15,19 +15,23 @@
     <link rel="manifest" href="assets/images/favicon/site.webmanifest">
     <!--font awesome link-->
     <script src="https://kit.fontawesome.com/53bccbcb41.js" crossorigin="anonymous"></script>
-    <!--Title-->
+    <!--title-->
     <title>Sudoku</title>
 </head>
 <body>
+    <!--body Title-->
     <h1>Sudoku</h1>
     <hr>
     <h2>Welcome!</h2>
+    <!--nav button-->
     <div class="homepage-buttons-container">
         <a class="homepage-buttons" href="game.html"  aria-label="Click to navigate to game page to start a new game">Start Game</a>
     </div>
+    <!--how to play section-->
     <h2>How To Play</h2> 
     <div id="homepage-rules">
         <div id="homepage-rules-left">
+            <!--generic rules explanation-->
             <h3>General Rules for Sudoku</h3>
             <ul>
                 <li>Sudoku grid consists of 9x9 spaces.</li>
@@ -40,6 +44,7 @@
             </ul>
         </div>
         <div id="homepage-rules-right">
+            <!--information about this specific version of the game-->
             <h3>About this version of Sudoku</h3>
             <ul >
                 <li>The goal of the game is to fill in all the tiles with the correct numbers in the shortest amount of time and with as few mistakes as possible.</li>
@@ -55,13 +60,16 @@
         </div>
     </div>
     <h3>See below the layout of the sudoku game and what the buttons do</h3>
+    <!--image depicting game board and useable functions-->
     <div id="guide-image-container">
         <img src="assets/images/site/guide.webp" id="guide-image" alt="image displays the game board with annotations explaining the function of each button">
     </div> 
+    <!--nav buttons-->
     <div class="homepage-buttons-container">
         <a class="homepage-buttons" href="index.html"  aria-label="Click to navigate back to the top of the page">Home</a>
         <a class="homepage-buttons" href="game.html"  aria-label="Click to navigate to game page to start a new game">Start Game</a>
     </div>
+    <!--footer section-->
     <footer>
         <a href="https://github.com/Tonywilson1211" target="_blank" id="footer-text" aria-label="link to website creator's github page">Made By Anthony Wilson</a>
     </footer>
